welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:31: error: not found: value tableau
	tableau(i)=Color
        ^Array1:34: error: not found: value tableau
	tableau(i+1)=Color
        ^