welcome.lessons.welcome.array.basics.Array1.scala.code
override def run() 

{
	var n=getMondeHauteur()
	var tableau= new Array[Color] (n)
	

	
	

	for(i<-0 to (getMondeHauteur()-1) )
	{
	tableau(i)= getCouleurSol()
	avance()
		
	}
	
}

def Colonne_1
{

	
	getCouleurSol()




	
	tableau(i)=Color
	avance()
	getCouleurSol()
	tableau(i+1)=Color
	
}
